<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/background_wood"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/gradient_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tablayout"
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/profil1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profil1"/>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/profil2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profil2"/>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/profil3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profil3"/>

                </com.google.android.material.tabs.TabLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.viewpager.widget.ViewPager>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </FrameLayout>

</LinearLayout>